--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,6 @@
   padding: 200px 0;
 }
 
-
 .hero__container {
   display: flex;
   flex-direction: column;
@@ -234,250 +233,250 @@
 }
 
 @keyframes wave-animation {
-    0% {
-      background-position: 0 bottom;
-    }
-    100% {
-      background-position: 200px bottom;
-    }
+  0% {
+    background-position: 0 bottom;
   }
-  @keyframes loading-animation {
-    0% {
-      background-size: 200px 0px;
-    }
-    100% {
-      background-size: 200px 200px;
-    }
+  100% {
+    background-position: 200px bottom;
   }
+}
+@keyframes loading-animation {
+  0% {
+    background-size: 200px 0px;
+  }
+  100% {
+    background-size: 200px 200px;
+  }
+}
 
-
-  .Cum{
-      font-size: 60px;
-    background-image: url("https://webdevtrick.com/wp-content/uploads/water-wave.png");
-    -moz-background-clip: text;
-    -o-background-clip: text;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    text-shadow: 0px 0px rgba(255, 255, 255, 0.06);
-    animation: wave-animation 0.3s infinite linear, loading-animation 3s infinite linear alternate;
-    background-size: 200px 100px;
-    background-repeat: repeat-x;
-    opacity: 1;
-  }
+.Cum {
+  font-size: 60px;
+  background-image: url("https://webdevtrick.com/wp-content/uploads/water-wave.png");
+  -moz-background-clip: text;
+  -o-background-clip: text;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  text-shadow: 0px 0px rgba(255, 255, 255, 0.06);
+  animation: wave-animation 0.3s infinite linear,
+    loading-animation 3s infinite linear alternate;
+  background-size: 200px 100px;
+  background-repeat: repeat-x;
+  opacity: 1;
+}
 
 .highlight {
-    border-bottom: 4px solid rgb(132, 0, 255);
+  border-bottom: 4px solid rgb(132, 0, 255);
 }
 
 @media screen and (max-width: 768px) {
-    .hero__heading {
-        font-size: 60px;
-    }
+  .hero__heading {
+    font-size: 60px;
+  }
 
-    .hero__description {
-        font-size: 40px;
-    }
+  .hero__description {
+    font-size: 40px;
+  }
 }
 
 /* About Section */
 .main {
-    background-color: #131313;
-    padding: 10rem 0;
+  background-color: #131313;
+  padding: 10rem 0;
 }
 
 .main__container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    height: 90%;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding:0 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  height: 90%;
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  padding: 0 50px;
 }
 
 .main__content {
-    color: #fff;
-    width: 100%;
+  color: #fff;
+  width: 100%;
 }
 
 .main__content h1 {
-    font-size: 2rem;
-    background-color: #fe3b6f;
-    background-image: linear-gradient(to top, #ec008c 0%, #fc6767 100%);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
+  font-size: 2rem;
+  background-color: #fe3b6f;
+  background-image: linear-gradient(to top, #ec008c 0%, #fc6767 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
 }
 
 .main__content h2 {
-    font-size: 4rem;
-    background: #ee0979;
-    background: -webkit-linear-gradient(to right, #fc5c7d, #6a82fb);
-    background: linear-gradient(to right, #fc5c7d, #6a82fb);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
+  font-size: 4rem;
+  background: #ee0979;
+  background: -webkit-linear-gradient(to right, #fc5c7d, #6a82fb);
+  background: linear-gradient(to right, #fc5c7d, #6a82fb);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
 }
 
 .main__content p {
-    margin-top: 1rem;
-    font-size: 2rem;
-    font-weight: 700;
+  margin-top: 1rem;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 .main__btn {
-    font-size: 1.8rem;
-    background: #833ab4;
-    background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-    padding: 20px 60px;
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    margin-top: 2rem;
-    cursor: pointer;
-    position: relative;
-    transition: all 0.35s;
-    outline: none;
+  font-size: 1.8rem;
+  background: #833ab4;
+  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  padding: 20px 60px;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  margin-top: 2rem;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.35s;
+  outline: none;
 }
 
 .main__btn a {
-    position: relative;
-    z-index: 2;
-    color: #fff;
-    text-decoration: none;
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  text-decoration: none;
 }
 
 .main__btn::after {
-    position:absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: all 0.35s;
-    border-radius: 4px;
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: all 0.35s;
+  border-radius: 4px;
 }
 
 .main__btn:hover {
-    color:#fff;
+  color: #fff;
 }
 
 .main__btn:hover::after {
-    width: 100%;
+  width: 100%;
 }
 
 .main__img--container {
-    text-align: center;
+  text-align: center;
 }
 
 .main__img--card {
-    margin: 10px;
-    height: 500px;
-    width: 500px;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: #fff;
-    background-image: linear-gradient(to right, #00dbde 0%, #fc00df 100%);
+  margin: 10px;
+  height: 500px;
+  width: 500px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  background-image: linear-gradient(to right, #00dbde 0%, #fc00df 100%);
 }
 
 .fa {
-    z-index: 100;
-    font-size: 60px;
+  z-index: 100;
+  font-size: 60px;
 }
 
 /*  Mobile Responsive   */
 @media screen and (max-width: 1100px) {
-    .main__container{
-        display: grid;
-        grid-template-columns: 1fr;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        margin: 0 auto;
-        height: 90%;
-    }
+  .main__container {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto;
+    height: 90%;
+  }
 
-    .main__img--container {
-        height: 425px;
-        width: 425px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  .main__img--container {
+    height: 425px;
+    width: 425px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .main__content {
-        text-align: center;
-        margin-bottom: 4rem;
-    }
+  .main__content {
+    text-align: center;
+    margin-bottom: 4rem;
+  }
 
-    .main__content h1 {
-        font-size: 2.5rem;
-        margin-top: 2rem;
-    }
+  .main__content h1 {
+    font-size: 2.5rem;
+    margin-top: 2rem;
+  }
 
-    .main__content h2 {
-        font-size: 3rem;
-    }
+  .main__content h2 {
+    font-size: 3rem;
+  }
 
-    .main__content p {
-        margin-top: 1rem;
-        font-size: 1.5rem;
-    }
+  .main__content p {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .main__img--card {
-        width: 250px;
-        height: 250px;
-    }
-    
-    .fa-users, 
-    .fa-layer-group {
-        font-size: 4rem;
-    }
+  .main__img--card {
+    width: 250px;
+    height: 250px;
+  }
 
-    .main__content h1 {
-        font-size: 2rem;
-        margin-top: 3rem;
-    }
+  .fa-users,
+  .fa-layer-group {
+    font-size: 4rem;
+  }
 
-    .main__content h2 {
-        font-size: 2rem;
-    }
+  .main__content h1 {
+    font-size: 2rem;
+    margin-top: 3rem;
+  }
 
-    .main__content p {
-        margin-top: 2rem;
-    }
+  .main__content h2 {
+    font-size: 2rem;
+  }
 
-    .main__btn {
-        padding: 0;
-    }
+  .main__content p {
+    margin-top: 2rem;
+  }
+
+  .main__btn {
+    padding: 0;
+  }
 }
-    
+
 /*  Services Section    */
 .services {
-    background: #131313;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    padding: 10rem 0;
+  background: #131313;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 10rem 0;
 }
 
 .services h1 {
-    background-color: #ff8177;
+  background-color: #ff8177;
   background-image: linear-gradient(to top, #ff0844 0%, #f7673c 100%);
   background-size: 100%;
   -webkit-background-clip: text;
@@ -485,24 +484,232 @@
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
   margin-bottom: 5rem;
-  font-size: 2.5rem;    
+  font-size: 2.5rem;
 }
 
 .services__wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
 }
 
 .services__card {
-    margin: 10px;
-    height: 425px;
-    width: 300px;
-    border-radius: 4px;
-    display: flex;
+  margin: 10px;
+  height: 425px;
+  width: 300px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+  transition: 0.3s ease-in;
+}
+
+.services__card:nth-child(2) {
+  background: #1fa2ff;
+  background: -webkit-linear-gradient(to right, #a6ffcb, #12d8fa, #1fa2ff);
+  background: linear-gradient(to right, #a6ffcb, #12d8fa, #1fa2ff);
+}
+
+.services__card:nth-child(3) {
+  background-image: linear-gradient(-225deg, #231557 #44107a #ff1361 #fff800);
+}
+
+.services__card h2 {
+  text-align: center;
+}
+
+.services__card p {
+  text-align: center;
+  margin-top: 24px;
+  font-size: 20px;
+}
+
+.services__btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.services__card button {
+  color: #fff;
+  padding: 14px 24px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background: #131313;
+  font-size: 1rem;
+}
+
+.services__card button:hover {
+  cursor: pointer;
+}
+
+.services__card:hover {
+  transform: scale(1.075);
+  transition: 0.3s ease-in;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1300px) {
+  .services__wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .services__wrapper {
+    grid-template-columns: 1fr;
+  }
+}
+
+.main__img--card2 {
+  margin: 10px;
+  height: 500px;
+  width: 500px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+}
+
+.shadow {
+  filter: drop-shadow(10px 5px 100px #ff00ff)
+    drop-shadow(-5px -5px 30px #ff00ff);
+}
+
+.triangle-wrapper {
+  width: 30vw;
+  height: calc(30vw / (1 / 1));
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  background-color: #ff00ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*  Footer CSS  */
+
+.footer__container {
+  background-color: #131313;
+  padding: 5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#footer__logo {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
+}
+
+.footer__links {
+  width: 100%;
+  max-width: 1000px;
+  display: flex;
+  justify-content: center;
+}
+
+.footer__links--wrapper {
+  display: flex;
+}
+
+.footer__links--items {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 16px;
+  text-align: left;
+  width: 160px;
+  box-sizing: border-box;
+}
+
+.footer__links--items h2 {
+  margin-bottom: 16px;
+  color: #fff;
+}
+
+.footer__links--items a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+}
+
+.footer__links--items a:hover {
+  color: #e9e9e9;
+  transition: 0.3 ease-out;
+}
+
+.social__icon--link {
+  color: #fff;
+  font-size: 24px;
+}
+
+.social__media {
+  max-width: 1000px;
+  width: 100%;
+}
+
+.social__media--wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  max-width: 1000px;
+  margin: 40px auto 0 auto;
+}
+
+.social__icon {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 240px;
+}
+
+.social__logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 240px;
+}
+
+.website__rights {
+  color: #fff;
+}
+
+@media screen and (max-width: 820px) {
+  .footer__links {
+    padding-top: 2rem;
+  }
+
+  #footer__logo {
+    margin-bottom: 2rem;
+  }
+
+  .website__rights {
+    margin-bottom: 2rem;
+  }
+
+  .footer__link--wrapper {
     flex-direction: column;
-    justify-content: center;
-    color: #fff;
-    background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
-    transition: 0.3s ease-in;
+  }
+
+  .social__media--wrap {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .footer__links--items {
+    margin: 0;
+    padding: 10px;
+    width: 100%;
+  }
 }
